# celeritas

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .jenkins  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.rst  COPYRIGHT  COPYRIGHT.md  README.md  _config.yml  index.md  publications.md  references.md
app/: CMakeLists.txt  CMakeLists.txt.notworking.01  celer-dump-data.cc  celer-export-geant.cc  orange-update.cc
app/celer-g4/: ActionInitialization.cc  ActionInitialization.hh  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  EventData.hh  ExceptionHandler.cc  ExceptionHandler.hh  GeantDiagnostics.cc  GeantDiagnostics.hh  GeantStepDiagnostic.cc  GeantStepDiagnostic.hh  GlobalSetup.cc  GlobalSetup.hh  HepMC3PrimaryGeneratorAction.cc  HepMC3PrimaryGeneratorAction.hh  HitClassesLinkDef.h  HitData.hh  HitRootIO.cc  HitRootIO.hh  LocalLogger.cc  LocalLogger.hh  MagneticField.hh  PGPrimaryGeneratorAction.cc  PGPrimaryGeneratorAction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RootIO.cc  RootIO.hh  RootPrimaryGeneratorAction.cc  RootPrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  RunInput.cc  RunInput.hh  RunInputIO.json.cc  RunInputIO.json.hh  SensitiveDetector.cc  (+14 more)
app/celer-geo/: CMakeLists.txt  GeoInput.cc  GeoInput.hh  README.md  Runner.cc  Runner.hh  Types.cc  Types.hh  celer-geo.cc  celer-geo.nojson.cc  raytrace.ipynb  test-harness.py  visualize.py
app/celer-sim/: CMakeLists.txt  RootOutput.cc  RootOutput.hh  Runner.cc  Runner.hh  RunnerInput.hh  RunnerInputIO.json.cc  RunnerInputIO.json.hh  RunnerOutput.cc  RunnerOutput.hh  StepTimer.hh  Transporter.cc  Transporter.hh  celer-sim.cc  simple-driver.py
app/data/: celerino.hepmc3  electron-3evt-15prim-iso.hepmc3  four-steel-slabs.gdml  lar-sphere.gdml  simple-cms.org.json  ttbar-7evt-5768prim.hepmc3  ttbarbits-12evt-118prim.hepmc3  ttbarsplit-12evt-1108prim.hepmc3
app/demo-geant-integration/: ActionInitialization.cc  ActionInitialization.hh  CMakeLists.txt  DemoActionInitialization.cc  DemoActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  GlobalSetup.cc  GlobalSetup.hh  HepMC3Reader.cc  HepMC3Reader.hh  HitClasses.hh  HitClassesLinkDef.h  HitRootIO.cc  HitRootIO.hh  MasterRunAction.cc  MasterRunAction.hh  NoFieldAlongStepFactory.cc  NoFieldAlongStepFactory.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  SensitiveHit.cc  SensitiveHit.hh  TrackingAction.cc  TrackingAction.hh  celer-g4.nogeant.cc  demo-geant-integration.cc  selection.xml  simple-cms-test.mac.in
app/demo-geo-check/: CMakeLists.txt  GCheckKernel.cc  GCheckKernel.cu  GCheckKernel.hh  GCheckRunner.cc  GCheckRunner.hh  demo-geo-check.cc  gcheck-four-levels.json.in
app/demo-interactor/: CMakeLists.txt  Detector.hh  Detector.i.hh  DetectorData.hh  DetectorInterface.hh  DetectorPointers.hh  DetectorStore.cc  DetectorStore.hh  DetectorView.hh  DetectorView.i.hh  HitAllocatorStore.cc  HostDetectorStore.cc  HostDetectorStore.hh  HostKNDemoRunner.cc  HostKNDemoRunner.hh  HostStackAllocatorStore.hh  KNDemoIO.cc  KNDemoIO.hh  KNDemoKernel.cu  KNDemoKernel.hh  KNDemoKernel.thrust.cu  KNDemoRunner.cc  KNDemoRunner.hh  KernelUtils.hh  LoadXs.cc  LoadXs.hh  PhysicsArrayCalculator.hh  PhysicsArrayCalculator.i.hh  PhysicsArrayParams.cc  PhysicsArrayParams.hh  PhysicsArrayPointers.hh  XsGridParams.cc  XsGridParams.hh  demo-interactor.cc  host-demo-interactor.cc  simple-driver.py
app/demo-loop/: CMakeLists.txt  Diagnostic.hh  EnergyDiagnostic.cc  EnergyDiagnostic.cu  EnergyDiagnostic.hh  EnergyDiagnostic.i.hh  GeoMaterialInterface.hh  GeoMaterialParams.cc  GeoMaterialParams.hh  GeoMaterialView.hh  KernelUtils.hh  KernelUtils.i.hh  LDemoIO.cc  LDemoIO.hh  LDemoIO.root.cc  LDemoInterface.hh  LDemoKernel.cc  LDemoKernel.cu  LDemoKernel.hh  LDemoLauncher.hh  LDemoParams.cc  LDemoParams.hh  LDemoRun.cc  LDemoRun.hh  LDemoRun.i.hh  ParticleProcessDiagnostic.cc  ParticleProcessDiagnostic.cu  ParticleProcessDiagnostic.hh  ParticleProcessDiagnostic.i.hh  RootOutput.cc  RootOutput.hh  Runner.cc  Runner.hh  RunnerInput.hh  RunnerInputIO.json.cc  RunnerInputIO.json.hh  TrackDiagnostic.cc  TrackDiagnostic.cu  TrackDiagnostic.hh  Transporter.cc  (+11 more)
app/demo-rasterizer/: CMakeLists.txt  ImageData.hh  ImageIO.cc  ImageIO.hh  ImageInterface.hh  ImagePointers.hh  ImageStore.cc  ImageStore.hh  ImageTrackView.hh  ImageTrackView.i.hh  RDemoKernel.cu  RDemoKernel.hh  RDemoRunner.cc  RDemoRunner.hh  demo-rasterizer.cc  glasbey-light.txt  simple-driver.py  visualize.py
app/geant-exporter/: ActionInitialization.cc  ActionInitialization.hh  BremsstrahlungProcess.cc  BremsstrahlungProcess.hh  CeleritasG4Version.hh  DetectorConstruction.cc  DetectorConstruction.hh  GeantExceptionHandler.cc  GeantExceptionHandler.hh  GeantLoggerAdapter.cc  GeantLoggerAdapter.hh  GeantPhysicsTableWriter.cc  GeantPhysicsTableWriter.hh  GeantPhysicsTableWriterHelper.hh  ImportProcessConverter.cc  ImportProcessConverter.hh  ImportProcessWriter.cc  ImportProcessWriter.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  (+3 more)
doc/: CMakeLists.txt  COPYRIGHT  acknowledgments.rst  api.rst  components.md  conf.py  config.json.in  development.rst  examples.rst  geant-exporter.graffle  index.rst  infrastructure.rst  installation.rst  introduction.rst  overview.rst  physics.rst  references.rst  usage.rst
interface/: CMakeLists.txt  celeritas.i
src/: .gitignore  CMakeLists.txt  celeritas_cmake_strings.h  celeritas_cmake_strings.h.in  celeritas_cmake_strings.hh.in  celeritas_config.h.in  celeritas_sys_config.h  celeritas_sys_config.h.in  celeritas_version.cc.in  celeritas_version.h  celeritas_version.h.in  celeritas_version.hh.in
test/: .clang-tidy  CMakeLists.txt  DiagnosticRngEngine.hh  JsonComparer.test.cc  Main.hh  Test.cc  Test.hh  TestMacros.hh  TestMacros.test.cc  TestMain.hh  celeritas_test.hh  celeritas_test_config.h.in
(+4071 files in other folders)
